# FIDESlib-GPT

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  README.md
bindings/: bindings.cpp
cpp/: native_helpers.cpp  native_helpers.hpp  native_smoke_test.cpp
reports/: fideslib_multigpu_grep_report.txt  fideslib_multigpu_key_snippets.txt  wp1_timing_report.json  wp3a_pcmm_cached_compare_report.json  wp3a_pcmm_compare_report.json  wp3a_pcmm_python_report.json  wp3b_diagonal_bsgs_compare_hefix_report.json  wp3b_diagonal_bsgs_compare_report.json  wp3b_large_scale_compare_report.json  wp3b_pcmm_core_ops_report.json  wp3c_jkls_square_baseline_report.json  wp3c_square_block_bsgs_5round_single_ct_multigpu_probe_report.json  wp3c_square_block_bsgs_5round_single_ct_report.json  wp3c_square_block_bsgs_baseline_report.json  wp3c_square_block_bsgs_cache_reuse_report.json  wp3c_square_block_bsgs_primitive_timing_report.json  wp3c_square_block_jkls_5round_single_ct_report.json  wp3d_bsgs_block_parallel_8gpu_probe_isolated_report.json  wp3d_bsgs_block_parallel_8gpu_probe_report.json  wp4_component_api_probe.txt  wp4_fideslib_ciphertext_deep_probe.txt  wp4_fideslib_raw_api_exact_probe.txt  wp4a_component_inspect_cpu_report.json  wp4b_component_roundtrip_cpu_report.json  wp4c_component_bchps_pcmm_cpu_debug_report.json  wp4d_component_vs_highlevel_add_pcmm_cpu_debug_report.json  wp4e2_component_linear_wsum_gpu_diag_report.json  wp4e2_copyhost_signature_probe.txt  wp4e3_gpu_copyback_cpu_debug_report.json  wp4e7_ckks_ciphertext_add_signature_probe.txt  wp4e_fideslib_gpu_component_api_probe.txt  wp4f_component_matmul_gpu_repeated_add_debug_report.json  wp4g_component_matmul_gpu_signed_repeated_addsub_debug_report.json  wp4h1_component_matmul_gpu_fused_raw_debug_report.json  wp4h2_matrix_api_perf_breakdown_report.json  wp4h3_matrix_api_scaling_sweep_report.json  wp4h_fused_component_kernel_probe.txt
scripts/: debug_plain_diagonal_bsgs.py  report_wp1_compare.py  report_wp1_layouts.py  report_wp1_timing.py  report_wp3a_pcmm_cached_compare.py  report_wp3a_pcmm_compare.py  report_wp3b_diagonal_bsgs_compare.py  report_wp3b_diagonal_bsgs_compare_hefix.py  report_wp3b_large_scale_compare.py  report_wp3b_pcmm_core_ops.py  report_wp3c_jkls_square_baseline.py  report_wp3c_square_block_bsgs_5round_single_ct.py  report_wp3c_square_block_bsgs_5round_single_ct_multigpu_probe.py  report_wp3c_square_block_bsgs_baseline.py  report_wp3c_square_block_bsgs_cache_reuse.py  report_wp3c_square_block_bsgs_primitive_timing.py  report_wp3c_square_block_jkls_5round_single_ct.py  report_wp3d_bsgs_block_parallel_8gpu_probe.py  report_wp3d_bsgs_block_parallel_8gpu_probe_isolated.py  (+22 more)
(+12 files in other folders)
